# Mercator-Descriptor

./: CMakeLists.txt  README.md  auto.sh  package.xml  pr_mpe.py  pr_rings.py  row_pr.py
config/: config_mercator.yaml
demo/: mercator_demo.cpp
include/: KDTreeVectorOfVectorsAdaptor.h  merDesc.h  mercator.h  tictoc.h
launch/: demo_mercator.launch
res_out/compare/00/: bow3d-kitti00_generated.txt  mkres_00_pyslam_1.txt  scres-kitti00_generated.txt  scres_00_pyslam_1.txt  stdres-kitti00_generated.txt  wzb_75_res-kitti00_generated.txt  wzb_deep_75_res-kitti00_generated.txt  wzb_intensity_75_res-kitti00_generated.txt  wzbres-kitti00_generated.txt
res_out/compare/02/: bow3d-kitti02_generated.txt  mkres_02_pyslam_1.txt  scres-kitti02_generated.txt  scres_02_pyslam_1.txt  stdres-kitti02_generated.txt  wzb_deep_75_res-kitti02_generated.txt  wzbres-kitti02_generated.txt
res_out/compare/05/: bow3d-kitti05_generated.txt  mkres_05_pyslam_1.txt  scres-kitti05_generated.txt  scres_05_pyslam_1.txt  wzb_75_res-kitti05_generated.txt
res_out/compare/06/: bow3d-kitti06_generated.txt  mkres_06_pyslam_1.txt  scres_06_pyslam_1.txt  stdres-kitti06_generated.txt  wzbres-kitti06_generated.txt
res_out/compare/07/: bow3d-kitti07_generated.txt  mkres_07_pyslam_1.txt  scres_07_pyslam_1.txt  stdres-kitti07_generated.txt  wzbres-kitti07_generated.txt
res_out/compare/08/: bow3d-kitti08_generated.txt  mkres_08_pyslam_1.txt  scres_08_pyslam_1.txt  stdres-kitti08_generated.txt  wzbres-kitti08_generated.txt
res_out/maxdeep/time/: time-kitti00_generated.txt  time-kitti02_generated.txt  time-kitti05_generated.txt  (+1 more)
res_out/mean_deep/: wzb_deepm_60_res-kitti00_generated.txt  wzb_deepm_60_res-kitti02_generated.txt  wzb_deepm_60_res-kitti05_generated.txt  wzb_deepm_60_res-kitti08_generated.txt
res_out/sc/: loopres-kitti00_generated.txt  scres-kitti06_generated.txt  scres-kitti07_generated.txt  scres-kitti08_generated.txt
res_out/std/: stdres-kitti05_generated.txt  time-kitti00_generated.txt
res_out/wzb/: wzbres-kitti05_generated.txt
res_out/wzb_75/: wzb_75_res-kitti02_generated.txt  wzb_75_res-kitti08_generated.txt
rviz_cfg/: demo.rviz
src/: merDesc.cpp  mercator.cpp
(+11 files in other folders)
